Closed
Bug 1282251
Opened 10 years ago
Closed 10 years ago
Remove nsCocoaFeatures::OnLionOrLater(), OnMountainLionOrLater() and OnMavericksOrLater()
Categories
(Core :: Widget: Cocoa, defect, P3)
Tracking
()
RESOLVED
FIXED
mozilla50
| Tracking | Status | |
|---|---|---|
| firefox50 | --- | fixed |
People
(Reporter: stefanh, Assigned: stefanh)
References
Details
(Whiteboard: tpi:+)
Attachments
(1 file)
|
7.19 KB,
patch
|
spohl.mozilla.bugs
:
review+
|
Details | Diff | Splinter Review |
We only support Mavericks and later now, so we can remove the above 3 functions. Dependent bugs will be filed in order to remove the usage of these functions from the tree.
| Assignee | ||
Comment 1•10 years ago
|
||
This should be it, including toolkit/xre/nsAppRunner.cpp. I've also removed some obsolete includes.
Try push: https://treeherder.mozilla.org/#/jobs?repo=try&revision=94bfaddad2fa
Attachment #8769851 -
Flags: review?(spohl.mozilla.bugs)
| Assignee | ||
Comment 2•10 years ago
|
||
Btw, I originally thought of removing the version defines (MAC_OS_X_VERSION_10_7_HEX, MAC_OS_X_VERSION_10_8_HEX) in nsCocoaFeatures.mm, but it does looks like we hit them through nsCocoaFeatures::InitializeVersionNumbers() on the try debug builders. The excerpt below is from https://treeherder.mozilla.org/#/jobs?repo=try&revision=8a40d2c60cf4 (OS X 10.7 debug) and the failure was caused by me removing the version defines (https://hg.mozilla.org/try/diff/8a40d2c60cf4/widget/cocoa/nsCocoaFeatures.mm#l1.12). So it looks like we actually execute the app when doing 'startup cache precompilation'.
------------------------------------
15:12:21 INFO - Executing /builds/slave/try-m64-d-00000000000000000000/build/src/obj-firefox/dist/bin/xpcshell -g /builds/slave/try-m64-d-00000000000000000000/build/src/obj-firefox/dist/NightlyDebug.app/Contents/Resources -a /builds/slave/try-m64-d-00000000000000000000/build/src/obj-firefox/dist/NightlyDebug.app/Contents/Resources -f /builds/slave/try-m64-d-00000000000000000000/build/src/toolkit/mozapps/installer/precompile_cache.js -e precompile_startupcache("resource://gre/");
15:12:22 INFO - [39678] ###!!! ASSERTION: OS X version too old, assuming 10.9: 'Error', file /builds/slave/try-m64-d-00000000000000000000/build/src/widget/cocoa/nsCocoaFeatures.mm, line 87
15:12:22 INFO - #01: nsCocoaFeatures::InitializeVersionNumbers()[/builds/slave/try-m64-d-00000000000000000000/build/src/obj-firefox/dist/bin/XUL +0x2cd2724]
15:12:22 INFO - #02: nsCocoaFeatures::OSXVersionMajor()[/builds/slave/try-m64-d-00000000000000000000/build/src/obj-firefox/dist/bin/XUL +0x2cd27bf]
15:12:22 INFO - #03: ParseManifest(NSLocationType, mozilla::FileLocation&, char*, bool, bool)[/builds/slave/try-m64-d-00000000000000000000/build/src/obj-firefox/dist/bin/XUL +0xe6d41]
15:12:22 INFO - #04: nsComponentManagerImpl::RegisterManifest(NSLocationType, mozilla::FileLocation&, bool)[/builds/slave/try-m64-d-00000000000000000000/build/src/obj-firefox/dist/bin/XUL +0xe01b9]
15:12:22 INFO - #05: nsComponentManagerImpl::RereadChromeManifests(bool)[/builds/slave/try-m64-d-00000000000000000000/build/src/obj-firefox/dist/bin/XUL +0xdfa3f]
15:12:22 INFO - #06: nsComponentManagerImpl::Init()[/builds/slave/try-m64-d-00000000000000000000/build/src/obj-firefox/dist/bin/XUL +0xdf314]
15:12:22 INFO - #07: NS_InitXPCOM2[/builds/slave/try-m64-d-00000000000000000000/build/src/obj-firefox/dist/bin/XUL +0x120960]
15:12:22 INFO - #08: XRE_XPCShellMain[/builds/slave/try-m64-d-00000000000000000000/build/src/obj-firefox/dist/bin/XUL +0xb22576]
15:12:22 INFO - #09: main[/builds/slave/try-m64-d-00000000000000000000/build/src/obj-firefox/dist/bin/xpcshell +0x1e29]
15:12:22 INFO - [39678] ###!!! ASSERTION: OS X version too old, assuming 10.9: 'Error', file /builds/slave/try-m64-d-00000000000000000000/build/src/widget/cocoa/nsCocoaFeatures.mm, line 87
15:12:22 INFO - Hit MOZ_CRASH() at /builds/slave/try-m64-d-00000000000000000000/build/src/memory/mozalloc/mozalloc_abort.cpp:33
15:13:05 INFO - Traceback (most recent call last):
15:13:05 INFO - File "/builds/slave/try-m64-d-00000000000000000000/build/src/toolkit/mozapps/installer/packager.py", line 415, in <module>
15:13:05 INFO - main()
15:13:05 INFO - File "/builds/slave/try-m64-d-00000000000000000000/build/src/toolkit/mozapps/installer/packager.py", line 409, in main
15:13:05 INFO - args.source, gre_path, base)
15:13:05 INFO - File "/builds/slave/try-m64-d-00000000000000000000/build/src/toolkit/mozapps/installer/packager.py", line 166, in precompile_cache
15:13:05 INFO - errors.fatal('Error while running startup cache precompilation')
15:13:05 INFO - File "/builds/slave/try-m64-d-00000000000000000000/build/src/python/mozbuild/mozpack/errors.py", line 103, in fatal
15:13:05 INFO - self._handle(self.FATAL, msg)
15:13:05 INFO - File "/builds/slave/try-m64-d-00000000000000000000/build/src/python/mozbuild/mozpack/errors.py", line 98, in _handle
15:13:05 INFO - raise ErrorMessage(msg)
15:13:05 INFO - mozpack.errors.ErrorMessage: Error: Error while running startup cache precompilation
15:13:05 INFO - make[7]: *** [stage-package] Error 1
------------------------------------
| Assignee | ||
Comment 3•10 years ago
|
||
(In reply to Stefan [:stefanh] from comment #2)
> So it looks like we actually execute the app when doing 'startup
> cache precompilation'.
Or at least execute code, since launching the app on 10.7 shouldn't be possible.
Updated•10 years ago
|
Priority: -- → P3
Whiteboard: tpi:+
Comment 4•10 years ago
|
||
Comment on attachment 8769851 [details] [diff] [review]
Remove functions
Review of attachment 8769851 [details] [diff] [review]:
-----------------------------------------------------------------
Looks great, thank you!
Attachment #8769851 -
Flags: review?(spohl.mozilla.bugs) → review+
Pushed by stefanh@inbox.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/9013839c66ba
Remove nsCocoaFeatures::OnLionOrLater(), OnMountainLionOrLater() and OnMavericksOrLater(). r=spohl.
Comment 6•10 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla50
You need to log in
before you can comment on or make changes to this bug.
Description
•