Bug 1282251 - Remove nsCocoaFeatures::OnLionOrLater(), OnMountainLionOrLater() and OnMavericksOrLater(). r=spohl.