toolkit/xre/nsAppRunner.cpp
@@ -165,7 +165,6 @@
 #ifdef XP_MACOSX
 #include "nsILocalFileMac.h"
 #include "nsCommandLineServiceMac.h"
-#include "nsCocoaFeatures.h"
 #endif
 
 // for X remote support
@@ -4672,20 +4671,7 @@ MultiprocessBlockPolicy() {
     gMultiprocessBlockPolicy = kE10sDisabledForOperatingSystem;
     return gMultiprocessBlockPolicy;
   }
-#endif
 
-  /**
-   * Avoids enabling e10s for OS X 10.6 - 10.8 users (<= Mountain Lion) as these
-   * versions will be unsupported soon.
-   */
-#if defined(XP_MACOSX)
-  if (!nsCocoaFeatures::OnMavericksOrLater()) {
-    gMultiprocessBlockPolicy = kE10sDisabledForOperatingSystem;
-    return gMultiprocessBlockPolicy;
-  }
-#endif
-
-#if defined(XP_WIN)
   /**
    * We block on Windows XP if layers acceleration is requested. This is due to
    * bug 1237769 where D3D9 and e10s behave badly together on XP.
